--- a/tools/config-generator/templates/testgrid_config_header.yaml
+++ b/tools/config-generator/templates/testgrid_config_header.yaml
@@ -34,5 +34,5 @@ default_dashboard_tab:
   num_columns_recent: 10
   code_search_url_template:      # The URL template to visit when searching for changelists
     url: https://github.com/knative/serving/compare/<start-custom-0>...<end-custom-0>
-  alert_options:
-    alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+  num_failures_to_alert: 0
+  num_passes_to_disable_alert: 1
