--- a/config/prow/cluster/301-rbac.yaml
+++ b/config/prow/cluster/301-rbac.yaml
@@ -131,9 +131,7 @@ rules:
       - list
       - watch
       # Required when deck runs with `--rerun-creates-job=true`
-      # **Warning:** Only use this for non-public deck instances, this allows
-      # anyone with access to your Deck instance to create new Prowjobs
-      # - create
+      - create
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1beta1
