Creating dot-release jobs for old release branches

--- a/config/prow/config_knative.yaml
+++ b/config/prow/config_knative.yaml
@@ -436,6 +436,39 @@ periodics:
     - dot-release: true
       dot-dev: true
       go113: true
+      release: "0.10"
+      env-vars:
+      - RELEASE_BRANCH=releaes-0.10
+      resources:
+        requests:
+          memory: 12Gi
+        limits:
+          memory: 16Gi
+    - dot-release: true
+      dot-dev: true
+      go113: true
+      release: "0.11"
+      env-vars:
+      - RELEASE_BRANCH=releaes-0.11
+      resources:
+        requests:
+          memory: 12Gi
+        limits:
+          memory: 16Gi
+    - dot-release: true
+      dot-dev: true
+      go113: true
+      release: "0.12"
+      env-vars:
+      - RELEASE_BRANCH=releaes-0.12
+      resources:
+        requests:
+          memory: 12Gi
+        limits:
+          memory: 16Gi
+    - dot-release: true
+      dot-dev: true
+      go113: true
       resources:
         requests:
           memory: 12Gi
@@ -489,6 +522,18 @@ periodics:
     - dot-release: true
       dot-dev: true
       go113: true
+      release: "0.11"
+      env-vars:
+      - RELEASE_BRANCH=releaes-0.11
+    - dot-release: true
+      dot-dev: true
+      go113: true
+      release: "0.12"
+      env-vars:
+      - RELEASE_BRANCH=releaes-0.12
+    - dot-release: true
+      dot-dev: true
+      go113: true
     - auto-release: true
       dot-dev: true
       go113: true
@@ -534,6 +579,39 @@ periodics:
     - dot-release: true
       dot-dev: true
       go113: true
+      release: "0.10"
+      env-vars:
+      - RELEASE_BRANCH=releaes-0.10
+      resources:
+        requests:
+          memory: 12Gi
+        limits:
+          memory: 16Gi
+    - dot-release: true
+      dot-dev: true
+      go113: true
+      release: "0.11"
+      env-vars:
+      - RELEASE_BRANCH=releaes-0.11
+      resources:
+        requests:
+          memory: 12Gi
+        limits:
+          memory: 16Gi
+    - dot-release: true
+      dot-dev: true
+      go113: true
+      release: "0.12"
+      env-vars:
+      - RELEASE_BRANCH=releaes-0.12
+      resources:
+        requests:
+          memory: 12Gi
+        limits:
+          memory: 16Gi
+    - dot-release: true
+      dot-dev: true
+      go113: true
       resources:
         requests:
           memory: 12Gi
@@ -571,6 +649,39 @@ periodics:
     - nightly: true
       dot-dev: true
       go113: true
+      resources:
+        requests:
+          memory: 12Gi
+        limits:
+          memory: 16Gi
+    - dot-release: true
+      dot-dev: true
+      go113: true
+      release: "0.10"
+      env-vars:
+      - RELEASE_BRANCH=releaes-0.10
+      resources:
+        requests:
+          memory: 12Gi
+        limits:
+          memory: 16Gi
+    - dot-release: true
+      dot-dev: true
+      go113: true
+      release: "0.11"
+      env-vars:
+      - RELEASE_BRANCH=releaes-0.11
+      resources:
+        requests:
+          memory: 12Gi
+        limits:
+          memory: 16Gi
+    - dot-release: true
+      dot-dev: true
+      go113: true
+      release: "0.12"
+      env-vars:
+      - RELEASE_BRANCH=releaes-0.12
       resources:
         requests:
           memory: 12Gi
@@ -640,6 +751,18 @@ periodics:
     - dot-release: true
       dot-dev: true
       go113: true
+      release: "0.11"
+      env-vars:
+      - RELEASE_BRANCH=releaes-0.11
+    - dot-release: true
+      dot-dev: true
+      go113: true
+      release: "0.12"
+      env-vars:
+      - RELEASE_BRANCH=releaes-0.12
+    - dot-release: true
+      dot-dev: true
+      go113: true
     - auto-release: true
       dot-dev: true
       go113: true
@@ -662,6 +785,18 @@ periodics:
     - dot-release: true
       dot-dev: true
       go113: true
+      release: "0.11"
+      env-vars:
+      - RELEASE_BRANCH=releaes-0.11
+    - dot-release: true
+      dot-dev: true
+      go113: true
+      release: "0.12"
+      env-vars:
+      - RELEASE_BRANCH=releaes-0.12
+    - dot-release: true
+      dot-dev: true
+      go113: true
     - auto-release: true
       dot-dev: true
       go113: true
@@ -674,6 +809,12 @@ periodics:
       go113: true
     - nightly: true
       go113: true
+    - dot-release: true
+      go113: true
+      release: "0.12"
+      env-vars:
+      - ORG_NAME=google
+        RELEASE_BRANCH=releaes-0.12
     - dot-release: true
       go113: true
       env-vars:
