--- a/config/prow/testgrid/testgrid.yaml
+++ b/config/prow/testgrid/testgrid.yaml
@@ -330,76 +330,166 @@ test_groups:
   alert_options: 
     alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
   num_failures_to_alert: 3
+- name: ci-knative-serving-0.10-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-serving-0.10-dot-release
+  alert_options: 
+    alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-knative-eventing-0.10-continuous
   gcs_prefix: knative-prow/logs/ci-knative-eventing-0.10-continuous
   alert_options: 
     alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
   num_failures_to_alert: 3
+- name: ci-knative-eventing-0.10-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.10-dot-release
+  alert_options: 
+    alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-knative-eventing-contrib-0.10-continuous
   gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.10-continuous
   alert_options: 
     alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
   num_failures_to_alert: 3
+- name: ci-knative-eventing-contrib-0.10-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.10-dot-release
+  alert_options: 
+    alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-knative-serving-0.11-continuous
   gcs_prefix: knative-prow/logs/ci-knative-serving-0.11-continuous
   alert_options: 
     alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
   num_failures_to_alert: 3
+- name: ci-knative-serving-0.11-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-serving-0.11-dot-release
+  alert_options: 
+    alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-knative-client-0.11-continuous
   gcs_prefix: knative-prow/logs/ci-knative-client-0.11-continuous
   alert_options: 
     alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
   num_failures_to_alert: 3
+- name: ci-knative-client-0.11-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-client-0.11-dot-release
+  alert_options: 
+    alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-knative-eventing-0.11-continuous
   gcs_prefix: knative-prow/logs/ci-knative-eventing-0.11-continuous
   alert_options: 
     alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
   num_failures_to_alert: 3
+- name: ci-knative-eventing-0.11-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.11-dot-release
+  alert_options: 
+    alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-knative-eventing-contrib-0.11-continuous
   gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.11-continuous
   alert_options: 
     alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
   num_failures_to_alert: 3
+- name: ci-knative-eventing-contrib-0.11-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.11-dot-release
+  alert_options: 
+    alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-knative-serving-operator-0.11-continuous
   gcs_prefix: knative-prow/logs/ci-knative-serving-operator-0.11-continuous
   alert_options: 
     alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
   num_failures_to_alert: 3
+- name: ci-knative-serving-operator-0.11-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-serving-operator-0.11-dot-release
+  alert_options: 
+    alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-knative-eventing-operator-0.11-continuous
   gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-0.11-continuous
   alert_options: 
     alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
   num_failures_to_alert: 3
+- name: ci-knative-eventing-operator-0.11-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-0.11-dot-release
+  alert_options: 
+    alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-knative-serving-0.12-continuous
   gcs_prefix: knative-prow/logs/ci-knative-serving-0.12-continuous
   alert_options: 
     alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
   num_failures_to_alert: 3
+- name: ci-knative-serving-0.12-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-serving-0.12-dot-release
+  alert_options: 
+    alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-knative-client-0.12-continuous
   gcs_prefix: knative-prow/logs/ci-knative-client-0.12-continuous
   alert_options: 
     alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
   num_failures_to_alert: 3
+- name: ci-knative-client-0.12-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-client-0.12-dot-release
+  alert_options: 
+    alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-knative-eventing-0.12-continuous
   gcs_prefix: knative-prow/logs/ci-knative-eventing-0.12-continuous
   alert_options: 
     alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
   num_failures_to_alert: 3
+- name: ci-knative-eventing-0.12-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-0.12-dot-release
+  alert_options: 
+    alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-knative-eventing-contrib-0.12-continuous
   gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.12-continuous
   alert_options: 
     alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
   num_failures_to_alert: 3
+- name: ci-knative-eventing-contrib-0.12-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-contrib-0.12-dot-release
+  alert_options: 
+    alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-knative-serving-operator-0.12-continuous
   gcs_prefix: knative-prow/logs/ci-knative-serving-operator-0.12-continuous
   alert_options: 
     alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
   num_failures_to_alert: 3
+- name: ci-knative-serving-operator-0.12-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-serving-operator-0.12-dot-release
+  alert_options: 
+    alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-knative-eventing-operator-0.12-continuous
   gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-0.12-continuous
   alert_options: 
     alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
   num_failures_to_alert: 3
+- name: ci-knative-eventing-operator-0.12-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-0.12-dot-release
+  alert_options: 
+    alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 - name: ci-google-knative-gcp-continuous
   gcs_prefix: knative-prow/logs/ci-google-knative-gcp-continuous
   alert_stale_results_hours: 3
@@ -427,6 +517,12 @@ test_groups:
   alert_options: 
     alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
   num_failures_to_alert: 3
+- name: ci-google-knative-gcp-0.12-dot-release
+  gcs_prefix: knative-prow/logs/ci-google-knative-gcp-0.12-dot-release
+  alert_options: 
+    alert_mail_to_addresses: "knative-productivity-dev@googlegroups.com"
+  alert_stale_results_hours: 170
+  num_failures_to_alert: 1
 dashboards:
 - name: serving
   dashboard_tab:
